# brainfuck-transpiler

./: .drone.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  test.sh
example/: bf.txt  test.txt
src/: bft.cpp  bft.h  logger.cpp  logger.h  parser.cpp  parser.h
